# HomeAutomation

./: .gitignore  README.md  index.html  params.json
3dprint/: box_with_holes.scad  box_with_holes.stl  lid_with_holes.scad  lid_with_holes.stl  pir_case.scad  pir_case.stl  pir_case_b.stl  rf_enclosure(tall).scad  rf_enclosure(tall).stl  rf_enclosure.scad  rf_enclosure.stl  rf_enclosure_sideways.scad  rf_enclosure_sideways.stl  rf_enclosure_with_lid.scad  rf_enclosure_with_lid.stl
CircuitSharer/: CircuitSharer.ino
DormerWindowState/: .gitignore  CMakeLists.txt  README.md  WINDOWS_TOOLCHAIN_SETUP.md  build.ps1  build.sh  eim_config.toml  partitions.csv  sdkconfig.defaults  setup-toolchain.ps1  setup-toolchain.sh
GarageParker/: GarageParker.ino  README.md
MiniSplit/: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  COMMISSIONING_GUIDE.md  IMPLEMENTATION_NOTES.md  MATTER_SDK_SETUP.md  PHASE1_COMPLETE.md  PHASE2_MATTER.md  PHASE3_INTEGRATION.md  PHASE3_TESTING_GUIDE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SENSORS.md  TUYAOPEN_PATTERNS.md  TUYAOPEN_REFERENCE.md  TUYA_DP_REFERENCE.md  WINDOWS_TOOLCHAIN_SETUP.md  build.ps1  build.sh  instructions.txt  sdkconfig  sdkconfig.defaults  setup-toolchain.ps1
MiniSplit/components/json/: CMakeLists.txt
MiniSplit/src/: CMakeLists.txt  bme280.c  idf_component.yml  main.c  matter_device.cpp  tuya_api_test.c  tuya_client.c
SmartThings_based_solution/: readme.md
Wyse5070DebSetup/: README.md  setup-bluetooth.sh  setup-containerd-storage.sh  setup-dongle-flasher.sh  setup-homeassistant-backup.sh  setup-homeassistant.sh  setup-matter-server.sh  setup-mg24.sh  setup-mosquitto.sh  setup-move-home.sh  setup-nat64-jool.sh  setup-otbr-usb-power.sh  setup-otbr-watchdog.sh  setup-swap.sh  setup-thread-credentials-sync.sh  setup-zigbee2mqtt.sh  setup-zwave-js-ui.sh  smartthings-inventory.py
blind_controller/: .gitignore  ADDING_A_BLIND.md  AOK.cpp  AOK.h  README.md  blind6_generated.txt  blind_controller.ino  blind_data.h  config.md  credentials_template.h  gen_blind.py  mqtt_pub.py
cam_copy/: CameraCopyMain.ps1  CameraDetector.ps1  Config.json  FileCopier.ps1  MTPCopier.ps1  MTPHelper.ps1  README.md
esp32-devkitv1/: readme.md
esp8266/: read.me
lightroom/: .env.example  .gitignore  README.md  config.example.json  config.yaml  debug_api_call.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  temp_all.json
rf24_based_solution-deprecated/: README.md
used-car-scanner/: .gitignore  README.md  _check_platforms.py  dealers.json  enrich_dealers.py  (+14 more)
(+879 files in other folders)
